--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -18,7 +18,7 @@ Parameters:
   App:
     Description: Applied directly as a tag
     Type: String
-    Default: frontend
+    Default: admin-console
   AMI:
     Description: AMI ID (may be replaced by RiffRaff for latest baked AMI)
     Type: String
@@ -63,7 +63,7 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash -ev
           aws --region ${AWS::Region} s3 cp s3://membership-dist/${Stack}/${Stage}/${App}/support-admin-console_1.0-SNAPSHOT_all.deb /tmp
-          dpkg -i /tmp/support-frontend_1.0-SNAPSHOT_all.deb
+          dpkg -i /tmp/support-admin-console.0-SNAPSHOT_all.deb
           /opt/cloudwatch-logs/configure-logs application ${Stack} ${Stage} ${App} /var/log/support-admin-console/application.log
   AppRole:
     Type: AWS::IAM::Role
@@ -93,7 +93,7 @@ Resources:
           Statement:
           - Effect: Allow
             Action: s3:*
-            Resource: !Sub arn:aws:s3:::support-frontend-admin-console/${Stage}/*
+            Resource: !Sub arn:aws:s3:::support-admin-console/${Stage}/*
 
   InstanceProfile:
     Type: AWS::IAM::InstanceProfile
