--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -56,14 +56,14 @@ Resources:
       ImageId: !Ref AMI
       SecurityGroups:
       - !Ref InstanceSecurityGroup
-      InstanceType: !FindInMap [ StageVariables, !Ref Stage, InstanceType ]
+      InstanceType: t2.micro
       IamInstanceProfile: !Ref InstanceProfile
       AssociatePublicIpAddress: true
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash -ev
           aws --region ${AWS::Region} s3 cp s3://membership-dist/${Stack}/${Stage}/${App}/support-admin-console_1.0-SNAPSHOT_all.deb /tmp
-          dpkg -i /tmp/support-admin-console.0-SNAPSHOT_all.deb
+          dpkg -i /tmp/support-admin-console_1.0-SNAPSHOT_all.deb
           /opt/cloudwatch-logs/configure-logs application ${Stack} ${Stage} ${App} /var/log/support-admin-console/application.log
   AppRole:
     Type: AWS::IAM::Role
