fix RUNNING_PID access issue

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,5 @@
 play.application.loader = "wiring.AppLoader"
 
 googleAuth.domain = "guardian.co.uk"
+
+play.server.pidfile.path=/var/run/RUNNING_PID
