--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,4 +2,4 @@ play.application.loader = "wiring.AppLoader"
 
 googleAuth.domain = "guardian.co.uk"
 
-play.server.pidfile.path=/var/run/RUNNING_PID
+pidfile.path="/dev/null"
