--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -102,7 +102,7 @@ Resources:
             Action:
             - autoscaling:DescribeAutoScalingInstances
             - autoscaling:DescribeAutoScalingGroups
-            Resource: !Sub arn:aws:s3:::support-admin-console/${Stage}/*
+            Resource: *
 
   InstanceProfile:
     Type: AWS::IAM::InstanceProfile
