--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "devDependencies": {
+    "webpack": "^4.5.0",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.3",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.1.3",
+    "ts-loader": "^5.2.2",
+    "@types/react-dom": "^16.0.11"
+  },
   "dependencies": {
-    "elm": "0.19.0",
-    "chokidar-cli": "1.2.1"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "scripts": {
-    "build": "elm make public/src/Main.elm --output public/build/elm.js",
-    "watch": "chokidar 'public/src/*.elm' -c 'elm make public/src/Main.elm --output public/build/elm.js'"
+    "build": "webpack --config webpack.config.js"
   }
 }
