--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "devDependencies": {
-    "webpack": "^4.5.0",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.3",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "ts-loader": "^5.2.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.1.3",
-    "ts-loader": "^5.2.2",
-    "@types/react-dom": "^16.0.11"
+    "webpack": "^4.5.0",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
