--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/material-ui": "^0.21.5",
     "@types/react-dom": "^16.0.11",
     "@types/react-router-dom": "^4.3.1",
     "ts-loader": "^5.2.2",
@@ -10,6 +11,8 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1"
