One legend per fieldset

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^4.3.1"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "watch": "webpack --config webpack.config.js --watch"
   }
 }
