--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -63,7 +63,7 @@ Resources:
       - !Ref InstanceSecurityGroup
       InstanceType: t3.micro
       IamInstanceProfile: !Ref InstanceProfile
-      AssociatePublicIpAddress: true
+      AssociatePublicIpAddress: false
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash -ev
