--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^4.3.1"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.prod.js",
+    "build-dev": "webpack --config webpack.dev.js",
     "watch": "webpack --config webpack.config.js --watch"
   }
 }
