--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "typescript": "^3.1.3",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
+    "@types/jest": "24.0.18"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.0",
@@ -21,6 +24,15 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "build-dev": "webpack --config webpack.dev.js",
-    "watch": "webpack --config webpack.dev.js --watch"
+    "watch": "webpack --config webpack.dev.js --watch",
+    "test": "echo 'Running JS tests' && jest"
+  },
+  "jest": {
+    "modulePaths": [
+      "public"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
   }
 }
