Increase play.http.parser.maxMemoryBuffer

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,3 +3,6 @@ play.application.loader = "wiring.AppLoader"
 googleAuth.domain = "guardian.co.uk"
 
 pidfile.path="/dev/null"
+
+play.http.parser.maxMemoryBuffer=4MB
+
