--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -118,7 +118,9 @@ Resources:
           Statement:
           - Effect: Allow
             Action: s3:*
-            Resource: !Sub arn:aws:s3:::gu-contributions-public/epic/${Stage}/*
+            Resource:
+            - !Sub arn:aws:s3:::gu-contributions-public/epic/${Stage}/*
+            - !Sub arn:aws:s3:::gu-contributions-public/banner/${Stage}/*
       - PolicyName: GoogleServiceAccountCertificate
         PolicyDocument:
           Version: 2012-10-17
