--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "devDependencies": {
+    "@types/jest": "24.0.18",
     "@types/material-ui": "^0.21.7",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^4.3.5",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
     "ts-loader": "^6.1.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.1.0",
-    "@types/jest": "24.0.18"
+    "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "immutability-helper": "^3.0.1",
     "react": "^16.9.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1"
   },
