--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "build-dev": "webpack --config webpack.dev.js",
     "watch": "webpack --config webpack.dev.js --watch",
     "lint": "eslint . --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx",
+    "fix": "npm run lint -- --fix",
     "test": "echo 'Running JS tests' && jest"
   },
   "jest": {
