--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -71,6 +71,7 @@ Resources:
       ImageId: !Ref AMI
       SecurityGroups:
       - !Ref InstanceSecurityGroup
+      - !Ref WazuhSecurityGroup
       InstanceType: t4g.micro
       IamInstanceProfile: !Ref InstanceProfile
       AssociatePublicIpAddress: false
@@ -248,6 +249,18 @@ Resources:
       - IpProtocol: tcp
         FromPort: 443
         ToPort: 443
+        CidrIp: 0.0.0.0/0
+
+  WazuhSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Allow outbound traffic from wazuh agent to manager
+      VpcId:
+        Ref: VpcId
+      SecurityGroupEgress:
+      - IpProtocol: tcp
+        FromPort: 1514
+        ToPort: 1515
         CidrIp: 0.0.0.0/0
 
   LogGroup:
