--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.9.0",
     "react-hook-form": "^6.7.2",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "@emotion/core": "^10.0.28",
+    "emotion": "^10.0.27",
+    "emotion-theming": "^10.0.27"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
