--- a/package.json
+++ b/package.json
@@ -21,18 +21,21 @@
     "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.5.1",
+    "@types/dagre": "^0.7.44",
     "@types/react-beautiful-dnd": "^13.0.0",
+    "dagre": "^0.8.5",
+    "emotion": "^10.0.27",
+    "emotion-theming": "^10.0.27",
     "immutability-helper": "^3.0.1",
     "react": "^16.9.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.9.0",
+    "react-flow-renderer": "^9.5.1",
     "react-hook-form": "^6.7.2",
-    "react-router-dom": "^5.0.1",
-    "@emotion/core": "^10.0.28",
-    "emotion": "^10.0.27",
-    "emotion-theming": "^10.0.27"
+    "react-router-dom": "^5.0.1"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
