--- a/package.json
+++ b/package.json
@@ -21,18 +21,16 @@
     "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.5.1",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@types/react-beautiful-dnd": "^13.0.0",
     "immutability-helper": "^3.0.1",
-    "react": "^16.9.0",
+    "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.9.0",
     "react-hook-form": "^6.7.2",
     "react-router-dom": "^5.0.1",
-    "@emotion/core": "^10.0.28",
-    "emotion": "^10.0.27",
-    "emotion-theming": "^10.0.27"
+    "@emotion/react": "^11.4.0"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
