--- a/package.json
+++ b/package.json
@@ -22,17 +22,19 @@
     "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@types/lodash": "^4.14.176",
     "@types/react-beautiful-dnd": "^13.0.0",
     "immutability-helper": "^3.0.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.9.0",
     "react-hook-form": "^6.7.2",
-    "react-router-dom": "^5.0.1",
-    "@emotion/react": "^11.4.0"
+    "react-router-dom": "^5.0.1"
   },
   "resolutions": {
     "csstype": "^2.6.18"
