--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/material-ui": "^0.21.12",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^4.3.5",
+    "@types/react": "^16.14.21",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "eslint": "^6.8.0",
