--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react-router-dom": "^4.3.5",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
+    "csstype": "^2.6.18",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
@@ -32,6 +33,9 @@
     "react-hook-form": "^6.7.2",
     "react-router-dom": "^5.0.1",
     "@emotion/react": "^11.4.0"
+  },
+  "resolutions": {
+    "csstype": "^2.6.18"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
