--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -128,6 +128,7 @@ Resources:
             Action: s3:*
             Resource:
             - !Sub arn:aws:s3:::gu-contributions-public/epic/${Stage}/*
+            - !Sub arn:aws:s3:::gu-contributions-public/header/${Stage}/*
             - !Sub arn:aws:s3:::gu-contributions-public/banner/${Stage}/*
       - PolicyName: GoogleServiceAccountCertificate
         PolicyDocument:
