--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@types/react-router-dom": "^4.3.5",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
+    "css-loader": "^1.0.0",
+    "style-loader": "^1.0.0",
     "csstype": "^2.6.18",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
