--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jest": "^26.6.3",
     "prettier": "^1.19.1",
     "sass-loader": "^10.0.0",
+    "sass": "1.32.0",
     "ts-jest": "^26.5.2",
     "ts-loader": "^6.1.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
