--- a/cdk/package.json
+++ b/cdk/package.json
@@ -2,37 +2,27 @@
   "name": "cdk",
   "version": "0.0.0",
   "private": true,
-  "bin": {
-    "cdk": "bin/cdk.js"
-  },
   "scripts": {
     "build": "tsc",
-    "watch": "tsc -w",
     "test": "jest",
-    "test:dev": "jest --watch",
     "format": "prettier --write \"{lib,bin}/**/*.ts\"",
-    "cdk": "cdk",
     "lint": "eslint lib/** bin/** --ext .ts --no-error-on-unmatched-pattern",
     "synth": "cdk synth --path-metadata false --version-reporting false",
     "diff": "cdk diff --path-metadata false --version-reporting false"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.152.0",
-    "@guardian/eslint-config-typescript": "^0.7.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "16.11.7",
-    "aws-cdk": "1.152.0",
-    "eslint": "^7.32.0",
-    "jest": "^27.3.1",
-    "prettier": "^2.4.1",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "typescript": "~4.4.3"
-  },
-  "dependencies": {
-    "@aws-cdk/cloudformation-include": "1.152.0",
-    "@aws-cdk/core": "1.152.0",
-    "@guardian/cdk": "40.0.1",
-    "source-map-support": "^0.5.20"
+    "@guardian/cdk": "41.0.2",
+    "@guardian/eslint-config-typescript": "1.0.1",
+    "@types/jest": "^27.4.1",
+    "@types/node": "17.0.23",
+    "aws-cdk": "2.20.0",
+    "aws-cdk-lib": "2.20.0",
+    "constructs": "10.0.110",
+    "eslint": "^8.12.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.6.2",
+    "source-map-support": "^0.5.20",
+    "ts-jest": "^27.1.4",
+    "typescript": "~4.6.3"
   }
 }
