--- a/package.json
+++ b/package.json
@@ -50,16 +50,8 @@
     "build": "webpack --config webpack.prod.js",
     "build-dev": "webpack --config webpack.dev.js",
     "watch": "webpack --config webpack.dev.js --watch",
-    "lint": "eslint . --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint .  --ext .js,.jsx,.ts,.tsx",
     "fix": "npm run lint -- --fix",
     "test": "echo 'Running JS tests' && jest"
-  },
-  "jest": {
-    "modulePaths": [
-      "public"
-    ],
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    }
   }
 }
