--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: support-admin-console
 Parameters:
-  VpcId:
+  OldVpcId:
     Type: String
     Description: VpcId of your existing Virtual Private Cloud (VPC)
     Default: vpc-e6e00183
@@ -71,7 +71,7 @@ Resources:
       ImageId: !Ref AMI
       SecurityGroups:
       - !Ref InstanceSecurityGroup
-      - !Ref WazuhSecurityGroup
+      - !Ref OldWazuhSecurityGroup
       InstanceType: t4g.micro
       IamInstanceProfile: !Ref InstanceProfile
       AssociatePublicIpAddress: false
@@ -210,7 +210,7 @@ Resources:
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 2
       UnhealthyThresholdCount: 2
-      VpcId: !Ref VpcId
+      VpcId: !Ref OldVpcId
       TargetGroupAttributes:
       - Key: deregistration_delay.timeout_seconds
         Value: '20'
@@ -221,7 +221,7 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Permit incoming HTTPS access on port 443, egress to port 9000
-      VpcId: !Ref VpcId
+      VpcId: !Ref OldVpcId
       SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 443
@@ -237,7 +237,7 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Open up SSH access and enable HTTP access on the configured port
-      VpcId: !Ref VpcId
+      VpcId: !Ref OldVpcId
       SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 22
@@ -257,12 +257,11 @@ Resources:
         ToPort: 443
         CidrIp: 0.0.0.0/0
 
-  WazuhSecurityGroup:
+  OldWazuhSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Allow outbound traffic from wazuh agent to manager
-      VpcId:
-        Ref: VpcId
+      VpcId: !Ref OldVpcId
       SecurityGroupEgress:
       - IpProtocol: tcp
         FromPort: 1514
