--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-beautiful-dnd": "^13.0.0",
     "immutability-helper": "^3.0.1",
     "lodash": "^4.17.21",
+    "panda-session": "^0.1.6",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.9.0",
