--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "css-loader": "^1.0.0",
-    "style-loader": "^1.0.0",
     "csstype": "^2.6.18",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
@@ -15,8 +14,9 @@
     "eslint-plugin-react": "^7.18.0",
     "jest": "^26.6.3",
     "prettier": "^1.19.1",
-    "sass-loader": "^10.0.0",
     "sass": "1.32.0",
+    "sass-loader": "^10.0.0",
+    "style-loader": "^1.0.0",
     "ts-jest": "^26.5.2",
     "ts-loader": "^6.1.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
@@ -40,6 +40,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.9.0",
     "react-hook-form": "^6.7.2",
+    "react-qr-code": "^2.0.7",
     "react-router-dom": "^5.0.1",
     "remirror": "^1.0.60"
   },
