--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/material-ui": "^0.21.7",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.0.1",
+    "@types/react-vis": "^1.11.11",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "css-loader": "^1.0.0",
@@ -27,13 +28,17 @@
   },
   "dependencies": {
     "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@mui/material": "^5.10.15",
+    "@mui/x-data-grid": "^5.17.12",
     "@remirror/pm": "^1.0.11",
     "@remirror/react": "^1.0.21",
     "@types/lodash": "^4.14.176",
     "@types/react-beautiful-dnd": "^13.0.0",
+    "date-fns": "^2.29.3",
     "immutability-helper": "^3.0.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -42,6 +47,7 @@
     "react-hook-form": "^6.7.2",
     "react-qr-code": "^2.0.7",
     "react-router-dom": "^5.0.1",
+    "react-vis": "^1.11.7",
     "remirror": "^1.0.60"
   },
   "resolutions": {
