--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,3 +6,14 @@ pidfile.path="/dev/null"
 
 play.http.parser.maxMemoryBuffer=4MB
 
+athena {
+  default {
+    driver="com.simba.athena.jdbc.Driver"
+    url="jdbc:awsathena://AwsRegion=eu-west-1"
+    readOnly="true"
+    S3OutputLocation="s3://gu-support-analytics/support-admin-console/"
+    AwsCredentialsProviderClass="com.simba.athena.amazonaws.auth.profile.ProfileCredentialsProvider"
+    LogPath="logs/application.log"
+    LogLevel=3
+  }
+}
