--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,6 +12,8 @@ athena {
     url="jdbc:awsathena://AwsRegion=eu-west-1"
     readOnly="true"
     S3OutputLocation="s3://gu-support-analytics/support-admin-console/"
+#     Use ProfileCredentialsProvider when running locally
+#     AwsCredentialsProviderClass="com.simba.athena.amazonaws.auth.profile.ProfileCredentialsProvider"
     AwsCredentialsProviderClass="com.simba.athena.amazonaws.auth.profile.InstanceProfileCredentialsProvider"
     LogPath="logs/application.log"
     LogLevel=3
