--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,7 +14,7 @@ athena {
     S3OutputLocation="s3://gu-support-analytics/support-admin-console/"
 #     Use ProfileCredentialsProvider when running locally
 #     AwsCredentialsProviderClass="com.simba.athena.amazonaws.auth.profile.ProfileCredentialsProvider"
-    AwsCredentialsProviderClass="com.simba.athena.amazonaws.auth.profile.InstanceProfileCredentialsProvider"
+    AwsCredentialsProviderClass="com.simba.athena.amazonaws.auth.InstanceProfileCredentialsProvider"
     LogPath="logs/application.log"
     LogLevel=3
   }
