--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ athena {
 #     Use ProfileCredentialsProvider when running locally
 #     AwsCredentialsProviderClass="com.simba.athena.amazonaws.auth.profile.ProfileCredentialsProvider"
     AwsCredentialsProviderClass="com.simba.athena.amazonaws.auth.InstanceProfileCredentialsProvider"
-    LogPath="logs/application.log"
+    LogPath="logs"
     LogLevel=3
   }
 }
