--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "@types/material-ui": "^0.21.7",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.0.1",
-    "@types/react-vis": "^1.11.11",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "css-loader": "^1.0.0",
@@ -43,12 +42,12 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^6.7.2",
     "react-qr-code": "^2.0.7",
     "react-router-dom": "^5.0.1",
-    "react-vis": "^1.11.7",
-    "remirror": "^1.0.60"
+    "remirror": "^1.0.60",
+    "recharts": "2.0.8"
   },
   "resolutions": {
     "csstype": "^2.6.18"
