--- a/package.json
+++ b/package.json
@@ -27,22 +27,27 @@
   },
   "dependencies": {
     "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@mui/material": "^5.10.15",
+    "@mui/x-data-grid": "^5.17.12",
     "@remirror/pm": "^1.0.11",
     "@remirror/react": "^1.0.21",
     "@types/lodash": "^4.14.176",
     "@types/react-beautiful-dnd": "^13.0.0",
+    "date-fns": "^2.29.3",
     "immutability-helper": "^3.0.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^6.7.2",
     "react-qr-code": "^2.0.7",
     "react-router-dom": "^5.0.1",
-    "remirror": "^1.0.60"
+    "remirror": "^1.0.60",
+    "recharts": "2.0.8"
   },
   "resolutions": {
     "csstype": "^2.6.18"
