--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -14,5 +14,6 @@ jobs:
       DEBUG: true
       ORG: the-guardian-cuu
       SKIP_NODE: false
+      PROJECT_TAGS: Team=MarketingTools
     secrets:
        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
