--- a/conf/riff-raff.yaml
+++ b/conf/riff-raff.yaml
@@ -10,7 +10,7 @@ deployments:
         PROD: AdminConsole-PROD.template.json
       amiParameter: AMIAdminconsole
       amiTags:
-        Recipe: bionic-membership-java11
+        Recipe: jammy-membership-java11
         AmigoStage: PROD
       amiEncrypted: true
   admin-console:
