--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/material-ui": "^0.21.7",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.0.1",
+    "@types/react": "^17.0.58",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "css-loader": "^1.0.0",
@@ -13,7 +14,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
     "jest": "^26.6.3",
-    "prettier": "^1.19.1",
+    "prettier": "^2.8.8",
     "sass": "1.32.0",
     "sass-loader": "^10.0.0",
     "style-loader": "^1.0.0",
@@ -50,7 +51,12 @@
     "recharts": "2.0.8"
   },
   "resolutions": {
-    "csstype": "^2.6.18"
+    "csstype": "^2.6.18",
+    "react": "^17.0.2"
+  },
+  "overrides": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
