--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
     "jest": "^26.6.3",
-    "prettier": "^2.8.8",
+    "prettier": "^1.19.1",
     "sass": "1.32.0",
     "sass-loader": "^10.0.0",
     "style-loader": "^1.0.0",
@@ -56,7 +56,8 @@
   },
   "overrides": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
