--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "@types/material-ui": "^0.21.7",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.0.1",
+    "@types/react": "~17.0.58",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
-    "css-loader": "^1.0.0",
+    "css-loader": "^6.7.3",
     "csstype": "^2.6.18",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
@@ -21,9 +22,9 @@
     "ts-loader": "^6.1.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^4.5.5",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "webpack": "^5.80.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
     "@emotion/react": "^11.4.0",
@@ -51,6 +52,11 @@
   },
   "resolutions": {
     "csstype": "^2.6.18"
+  },
+  "overrides": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
