--- a/.github/workflows/admin-console.yml
+++ b/.github/workflows/admin-console.yml
@@ -44,16 +44,27 @@ jobs:
           ./script/ci
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
           aws-region: eu-west-1
+
+      - name: Setup Java 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: "corretto"
+          java-version: "11"
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.ivy2/cache
+            ~/.sbt
+            ~/.coursier
+          key: sbt
 
       - name: riffraff
         run: |
           export LAST_TEAMCITY_BUILD=2000
           export GITHUB_RUN_NUMBER=$(( $GITHUB_RUN_NUMBER + $LAST_TEAMCITY_BUILD ))
 
-          npm install -g yarn
-          yarn install
-          yarn run riffraff
+          sbt clean riffRaffUpload
