--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "devDependencies": {
     "@types/jest": "24.0.18",
     "@types/material-ui": "^0.21.7",
+    "@types/react": "~17.0.58",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.0.1",
-    "@types/react": "~17.0.58",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "css-loader": "^6.7.3",
@@ -13,12 +13,12 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
-    "jest": "^26.6.3",
+    "jest": "^29.6.1",
     "prettier": "^1.19.1",
     "sass": "1.32.0",
     "sass-loader": "^10.0.0",
     "style-loader": "^1.0.0",
-    "ts-jest": "^26.5.2",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^6.1.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^4.5.5",
@@ -40,6 +40,7 @@
     "@types/react-beautiful-dnd": "^13.0.0",
     "date-fns": "^2.29.3",
     "immutability-helper": "^3.0.1",
+    "json-schema": "^0.4.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
@@ -47,8 +48,8 @@
     "react-hook-form": "^6.7.2",
     "react-qr-code": "^2.0.7",
     "react-router-dom": "^5.0.1",
-    "remirror": "^1.0.60",
-    "recharts": "2.0.8"
+    "recharts": "2.0.8",
+    "remirror": "^1.0.60"
   },
   "resolutions": {
     "csstype": "^2.6.18"
