--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^2.29.3",
     "immutability-helper": "^3.0.1",
     "lodash": "^4.17.21",
+    "lz-string": "^1.5.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.2",
