--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lz-string": "^1.5.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.8",
     "react-qr-code": "^2.0.7",
