--- a/cdk/package.json
+++ b/cdk/package.json
@@ -11,13 +11,13 @@
     "diff": "cdk diff --path-metadata false --version-reporting false"
   },
   "devDependencies": {
-    "@guardian/cdk": "^50.9.0",
+    "@guardian/cdk": "58.0.0",
     "@guardian/eslint-config-typescript": "1.0.1",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.23",
-    "aws-cdk": "^2.78.0",
-    "aws-cdk-lib": "2.80.0",
-    "constructs": "10.0.110",
+    "aws-cdk": "2.136.1",
+    "aws-cdk-lib": "2.136.1",
+    "constructs": "10.3.0",
     "eslint": "^8.12.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.2",
