--- a/cdk/package.json
+++ b/cdk/package.json
@@ -12,17 +12,18 @@
   },
   "devDependencies": {
     "@guardian/cdk": "58.0.0",
-    "@guardian/eslint-config-typescript": "1.0.1",
+    "@guardian/eslint-config-typescript": "10.0.1",
     "@types/jest": "^27.4.1",
-    "@types/node": "17.0.23",
+    "@types/node": "18.18.0",
     "aws-cdk": "2.136.1",
     "aws-cdk-lib": "2.136.1",
     "constructs": "10.3.0",
-    "eslint": "^8.12.0",
-    "jest": "^27.5.1",
+    "eslint": "8.56.0",
+    "jest": "29.7.0",
     "prettier": "^2.6.2",
     "source-map-support": "^0.5.20",
-    "ts-jest": "^27.1.4",
-    "typescript": "~4.6.3"
+    "ts-jest": "29.1.2",
+    "tslib": "2.6.2",
+    "typescript": "5.3.3"
   }
 }
