--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "@types/react": "~17.0.58",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "css-loader": "^6.7.3",
     "csstype": "^2.6.18",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint": "8.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react": "^7.37.2",
     "jest": "^29.7.0",
     "prettier": "^1.19.1",
     "style-loader": "^4.0.0",
