feat(wip): add banner design section to banner design form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,13 @@
     "target": "es6",
     "module": "es6",
     "moduleResolution": "node",
-    "lib": ["dom", "es2017","es2019"],
+    "lib": ["dom", "es2017", "es2019"],
     "jsx": "react",
     "allowJs": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": "src",
     "strict": true,
