--- a/.github/workflows/admin-console.yml
+++ b/.github/workflows/admin-console.yml
@@ -24,9 +24,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v6
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: latest
+      - run: npm install --global corepack@0.31.0
+        shell: bash
+
+      - run: corepack enable
+        shell: bash
 
       - name: Use Node.js
         uses: actions/setup-node@v6
